--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,9 @@
-name: Deploy to Production Server
+name: Deploy to Cloud Server
 
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -14,77 +13,160 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up Go
-      uses: actions/setup-go@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
       with:
-        go-version: '1.21'
-        
-    - name: Cache Go modules
-      uses: actions/cache@v3
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
-          
-    - name: Build application
-      run: |
-        go mod download
-        go mod verify
-        go build -o bin/lingua-ai ./cmd/main.go
+        context: .
+        push: false
+        load: true
+        tags: lingua-ai:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
         
     - name: Run tests
       run: |
         go test ./...
         
-    - name: Deploy to server
+    - name: Deploy to cloud server
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        port: ${{ secrets.SERVER_PORT }}
+        password: ${{ secrets.SERVER_PASSWORD }}
+        port: ${{ secrets.SERVER_PORT || '22' }}
         script: |
-          # Останавливаем текущий сервис
-          sudo systemctl stop lingua-ai || true
+          # Останавливаем текущие контейнеры
+          cd /opt/lingua-ai || mkdir -p /opt/lingua-ai && cd /opt/lingua-ai
+          docker-compose down || true
           
-          # Создаем директорию для приложения
-          sudo mkdir -p /opt/lingua-ai
-          sudo chown $USER:$USER /opt/lingua-ai
+          # Создаем .env файл с переменными окружения
+          cat > .env << 'EOF'
+          # Telegram Bot Configuration
+          TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_WEBHOOK_URL=${{ secrets.TELEGRAM_WEBHOOK_URL }}
           
-          # Копируем новый бинарный файл
-          cp bin/lingua-ai /opt/lingua-ai/
-          chmod +x /opt/lingua-ai/lingua-ai
+          # AI Provider Configuration
+          AI_PROVIDER=${{ secrets.AI_PROVIDER || 'deepseek' }}
+          AI_MODEL=${{ secrets.AI_MODEL || 'deepseek-chat' }}
+          AI_MAX_TOKENS=${{ secrets.AI_MAX_TOKENS || '1000' }}
+          AI_TEMPERATURE=${{ secrets.AI_TEMPERATURE || '0.7' }}
           
-          # Создаем systemd сервис
-          sudo tee /etc/systemd/system/lingua-ai.service > /dev/null <<EOF
-          [Unit]
-          Description=Lingua AI Telegram Bot
-          After=network.target postgresql.service
-          Requires=postgresql.service
+          # DeepSeek Configuration
+          DEEPSEEK_API_KEY=${{ secrets.DEEPSEEK_API_KEY }}
+          DEEPSEEK_BASE_URL=${{ secrets.DEEPSEEK_BASE_URL || 'https://api.deepseek.com/v1' }}
           
-          [Service]
-          Type=simple
-          User=root
-          WorkingDirectory=/opt/lingua-ai
-          ExecStart=/opt/lingua-ai/lingua-ai
-          Restart=always
-          RestartSec=10
-          EnvironmentFile=/opt/lingua-ai/.env
+          # OpenRouter Configuration
+          OPENROUTER_API_KEY=${{ secrets.OPENROUTER_API_KEY }}
+          OPENROUTER_SITE_URL=${{ secrets.OPENROUTER_SITE_URL || 'https://lingua-ai.ru' }}
+          OPENROUTER_SITE_NAME=${{ secrets.OPENROUTER_SITE_NAME || 'Lingua AI' }}
           
-          [Install]
-          WantedBy=multi-user.target
+          # Whisper Configuration
+          WHISPER_API_URL=http://whisper:9000
+          WHISPER_MODEL=${{ secrets.WHISPER_MODEL || 'small' }}
+          WHISPER_COMPUTE=${{ secrets.WHISPER_COMPUTE || 'int8' }}
+          
+          # Database Configuration
+          DB_HOST=postgres
+          DB_PORT=5432
+          DB_USER=lingua_user
+          DB_PASSWORD=lingua_password
+          DB_NAME=lingua_ai
+          DB_SSL_MODE=disable
+          
+          # Application Configuration
+          APP_ENV=production
+          LOG_LEVEL=${{ secrets.LOG_LEVEL || 'info' }}
+          APP_PORT=8080
+          
+          # YooKassa Configuration
+          YUKASSA_SHOP_ID=${{ secrets.YUKASSA_SHOP_ID }}
+          YUKASSA_SECRET_KEY=${{ secrets.YUKASSA_SECRET_KEY }}
+          YUKASSA_TEST_MODE=${{ secrets.YUKASSA_TEST_MODE || 'false' }}
           EOF
           
-          # Перезагружаем systemd и запускаем сервис
-          sudo systemctl daemon-reload
-          sudo systemctl enable lingua-ai
-          sudo systemctl start lingua-ai
+          # Копируем docker-compose.yml
+          cat > docker-compose.yml << 'EOF'
+          version: '3.8'
           
-          # Проверяем статус
-          sudo systemctl status lingua-ai
+          services:
+            postgres:
+              image: postgres:15-alpine
+              container_name: lingua-ai-postgres
+              environment:
+                POSTGRES_DB: lingua_ai
+                POSTGRES_USER: lingua_user
+                POSTGRES_PASSWORD: lingua_password
+              volumes:
+                - postgres_data:/var/lib/postgresql/data
+                - ./scripts/migrations:/docker-entrypoint-initdb.d
+              ports:
+                - "5432:5432"
+              restart: unless-stopped
+              healthcheck:
+                test: ["CMD-SHELL", "pg_isready -U lingua_user -d lingua_ai"]
+                interval: 30s
+                timeout: 10s
+                retries: 3
+              
+            whisper:
+              image: onerahmet/openai-whisper-asr-webservice:latest
+              container_name: whisper
+              ports:
+                - "8081:9000"
+              environment:
+                ASR_MODEL: ${{ secrets.WHISPER_MODEL || 'small' }}
+                ASR_TASK: transcribe
+                ASR_DEVICE: cpu
+                ASR_COMPUTE_TYPE: ${{ secrets.WHISPER_COMPUTE || 'int8' }}
+              restart: unless-stopped
+              healthcheck:
+                test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9000/"]
+                interval: 30s
+                timeout: 10s
+                retries: 3
+              
+            app:
+              image: lingua-ai:latest
+              container_name: lingua-ai-app
+              ports:
+                - "8080:8080"
+              depends_on:
+                postgres:
+                  condition: service_healthy
+                whisper:
+                  condition: service_healthy
+              restart: unless-stopped
+              healthcheck:
+                test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+                interval: 30s
+                timeout: 10s
+                retries: 3
+              
+          volumes:
+            postgres_data:
+              driver: local
+          EOF
           
-          # Ждем запуска и проверяем webhook
-          sleep 10
+          # Создаем директорию для скриптов
+          mkdir -p scripts/migrations
+          
+          # Копируем миграции (если есть)
+          if [ -d "/tmp/scripts" ]; then
+            cp -r /tmp/scripts/* scripts/
+          fi
+          
+          # Запускаем контейнеры
+          docker-compose up -d
+          
+          # Ждем запуска и проверяем статус
+          sleep 30
+          docker-compose ps
+          
+          # Проверяем health check
           curl -f http://localhost:8080/health || exit 1
+          
+          echo "✅ Deployment completed successfully!"
