--- a/.env_example
+++ b/.env_example
@@ -8,6 +8,11 @@ AI_MODEL=GigaChat
 AI_MAX_TOKENS=1000
 AI_TEMPERATURE=0.7
 
+# YooKassa Configuration
+YUKASSA_SHOP_ID=your_shop_id
+YUKASSA_SECRET_KEY=your_secret_key
+YUKASSA_TEST_MODE=true
+YUKASSA_PROVIDER_TOKEN=your_provider_token_from_botfather
 
 # Database Configuration
 DB_HOST=localhost
