--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,7 +35,9 @@ jobs:
         tags: |
           ghcr.io/zagir2000/linguaai:latest
           ghcr.io/zagir2000/linguaai:${{ github.sha }}
-        cache-from: type=gha
+        cache-from: |
+          type=gha
+          type=registry,ref=ghcr.io/zagir2000/linguaai-base:latest
         cache-to: type=gha,mode=max
         build-args: |
           BUILD_DATE=${{ github.run_number }}
