--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,8 @@ services:
     volumes:
       - ./logs:/app/logs
       - ./audio:/app/audio  # Общая папка для аудио файлов
+      - /opt/lingua-ai-tts/tts_env/bin/tts:/usr/local/bin/tts:ro  # TTS с хоста
+      - /root/.local/share/tts:/root/.local/share/tts:ro  # TTS модели
     ports:
       - "8080:8080"
     depends_on:
