--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,8 +105,7 @@ services:
     volumes:
       - ./logs:/app/logs
       - ./audio:/app/audio  # Общая папка для аудио файлов
-      - /opt/lingua-ai-tts/tts_env/bin/tts:/usr/local/bin/tts:ro  # TTS исполняемый файл
-      - /opt/lingua-ai-tts/tts_env/lib:/opt/tts_lib:ro  # TTS библиотеки
+      - /opt/lingua-ai-tts/tts_env:/opt/tts:ro  # Все TTS окружение
       - /root/.local/share/tts:/root/.local/share/tts:ro  # TTS модели
     ports:
       - "8080:8080"
