--- a/.env_example
+++ b/.env_example
@@ -12,7 +12,6 @@ AI_TEMPERATURE=0.7
 YUKASSA_SHOP_ID=your_shop_id
 YUKASSA_SECRET_KEY=your_secret_key
 YUKASSA_TEST_MODE=true
-YUKASSA_PROVIDER_TOKEN=your_provider_token_from_botfather
 
 # Database Configuration
 DB_HOST=localhost
@@ -31,4 +30,8 @@ APP_PORT=8080
 MIGRATION_PATH=file://scripts/migrations 
 
 # Whisper Configuration
-WHISPER_API_URL=http://localhost:
+WHISPER_API_URL=http://localhost:9000
+
+# Text-to-Speech Configuration (AllTalk)
+TTS_ENABLED=false
+TTS_BASE_URL=http://alltalk:7851
