feat: заменить AllTalk TTS на Piper TTS
- Создан Dockerfile.piper с Piper TTS API сервером
- Добавлен piper_service.go для интеграции с приложением
- Обновлен docker-compose.yml для использования Piper TTS
- Обновлены конфигурации и .env_example
- Удален alltalk_service.go
- Piper TTS потребляет ~256MB памяти против 4GB у AllTalk

--- a/.env_example
+++ b/.env_example
@@ -32,6 +32,6 @@ MIGRATION_PATH=file://scripts/migrations
 # Whisper Configuration
 WHISPER_API_URL=http://localhost:9000
 
-# Text-to-Speech Configuration (AllTalk)
+# Text-to-Speech Configuration (Piper TTS)
 TTS_ENABLED=false
-TTS_BASE_URL=http://alltalk:7851
+TTS_BASE_URL=http://piper:8000
