--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,6 +40,18 @@ jobs:
         build-args: |
           BUILD_DATE=${{ github.run_number }}
           GIT_COMMIT=${{ github.sha }}
+          
+    - name: Build and push Piper TTS image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile.piper
+        push: true
+        tags: |
+          ghcr.io/zagir2000/piper-tts:latest
+          ghcr.io/zagir2000/piper-tts:${{ github.sha }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
         
     - name: Run tests
       run: |
@@ -62,8 +74,9 @@ jobs:
           # Останавливаем текущие контейнеры
           docker-compose down || true
           
-          # Принудительно обновляем образ
+          # Принудительно обновляем образы
           docker pull ghcr.io/zagir2000/linguaai:latest || true
+          docker pull ghcr.io/zagir2000/piper-tts:latest || true
           
           # Очищаем неиспользуемые образы и кэш
           docker system prune -f || true
@@ -117,6 +130,7 @@ jobs:
           
           # TTS Configuration
           TTS_ENABLED=${{ secrets.TTS_ENABLED || 'false' }}
+          TTS_BASE_URL=http://piper:8000
           EOF
           
           # Создаем docker-compose.yml с готовым образом
@@ -158,6 +172,20 @@ jobs:
                 timeout: 10s
                 retries: 3
               
+            piper:
+              image: ghcr.io/zagir2000/piper-tts:latest
+              container_name: piper-tts
+              ports:
+                - "8000:8000"
+              volumes:
+                - piper_voices:/app/voices
+              restart: unless-stopped
+              healthcheck:
+                test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8000/health"]
+                interval: 30s
+                timeout: 10s
+                retries: 3
+              
             app:
               image: ghcr.io/zagir2000/linguaai:latest
               container_name: lingua-ai-app
@@ -189,15 +217,15 @@ jobs:
                 - YUKASSA_SECRET_KEY=${YUKASSA_SECRET_KEY}
                 - YUKASSA_TEST_MODE=${YUKASSA_TEST_MODE}
                 - TTS_ENABLED=${TTS_ENABLED}
-              volumes:
-                - /opt/lingua-ai-tts/tts_env:/opt/lingua-ai-tts/tts_env:ro
-                - /root/.local/share/tts:/root/.local/share/tts:ro
+                - TTS_BASE_URL=${TTS_BASE_URL}
               ports:
                 - "8080:8080"
               depends_on:
                 postgres:
                   condition: service_healthy
                 whisper:
+                  condition: service_healthy
+                piper:
                   condition: service_healthy
               restart: unless-stopped
               healthcheck:
@@ -208,6 +236,8 @@ jobs:
               
           volumes:
             postgres_data:
+              driver: local
+            piper_voices:
               driver: local
           EOF
           
